force-app/main/default/objects/Account/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Manager</fullName>
            </value>
            <value>
                <fullName>Chauffeur</fullName>
            </value>
            <value>
                <fullName>Chief Executive Officer</fullName>
            </value>
            <value>
                <fullName>Chief Operations Officer</fullName>
            </value>
            <value>
                <fullName>Cleaner</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Director of Operations</fullName>
            </value>
            <value>
                <fullName>Finance Executive</fullName>
            </value>
            <value>
                <fullName>HR Payroll Executive</fullName>
            </value>
            <value>
                <fullName>Head of Piano Department</fullName>
            </value>
            <value>
                <fullName>Human Resource Manager</fullName>
            </value>
            <value>
                <fullName>Instrument Technician</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Music Instructor</fullName>
            </value>
            <value>
                <fullName>Music Teacher</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Sales Executive</fullName>
            </value>
            <value>
                <fullName>Sales and Operations Executive</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Piano Technician</fullName>
            </value>
            <value>
                <fullName>Language Teacher</fullName>
            </value>
            <value>
                <fullName>HR Executive</fullName>
            </value>
            <value>
                <fullName>Assistant Director of Marketing</fullName>
                <isActive>false</isActive>
                <label>Assistant Director of Marketing</label>
            </value>
            <value>
                <fullName>Assistant Director of Product Management</fullName>
                <isActive>false</isActive>
                <label>Assistant Director of Product Management</label>
            </value>
            <value>
                <fullName>Associate Director of HR</fullName>
                <isActive>false</isActive>
                <label>Associate Director of HR</label>
            </value>
            <value>
                <fullName>Associate Director of IT and Operations</fullName>
                <isActive>false</isActive>
                <label>Associate Director of IT and Operations</label>
            </value>
            <value>
                <fullName>Director of Retail</fullName>
                <isActive>false</isActive>
                <label>Director of Retail</label>
            </value>
            <value>
                <fullName>Executive</fullName>
                <isActive>false</isActive>
                <label>Executive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>