force-app/main/default/objects/Account/fields/Languages_you_know__c.field-meta.xml
<CustomField>
    <fullName>Languages_you_know__c</fullName>
    <label>Languages you know</label>
    <length>255</length>
    <type>Text</type>
</CustomField>