force-app/main/default/objects/Account/fields/Last_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Date__c</fullName>
    <label>Last Invoice Date</label>
    <summarizedField>Invoice__c.Invoice_Date__c</summarizedField>
    <summaryForeignKey>Invoice__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>