force-app/main/default/objects/Account/fields/Learning_Style__c.field-meta.xml
<CustomField>
    <fullName>Learning_Style__c</fullName>
    <label>Learning Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fun</fullName>
            </value>
            <value>
                <fullName>Exam</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>