force-app/main/default/objects/Account/fields/Location_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Birth__c</fullName>
    <label>Location of Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>