force-app/main/default/objects/Account/fields/Main_Centre__c.field-meta.xml
<CustomField>
    <fullName>Main_Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Centre</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Main Centre)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>