force-app/main/default/objects/Account/fields/Minor_Instruments_Disciplines__c.field-meta.xml
<CustomField>
    <fullName>Minor_Instruments_Disciplines__c</fullName>
    <label>Minor Instruments / Disciplines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Instrument</valueSetName>
    </valueSet>
</CustomField>