force-app/main/default/objects/Account/fields/Mobile_App_User__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_User__c</fullName>
    <description>This field explicitly shows if a customer is using mobile app</description>
    <formula>IF( 

NOT (ISBLANK( FCM_Token__c )) ,

 TRUE,FALSE)</formula>
    <inlineHelpText>This field explicitly shows if a customer is using Aureus mobile app</inlineHelpText>
    <label>Mobile App User</label>
    <type>Checkbox</type>
</CustomField>