force-app/main/default/objects/Account/fields/Next_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Invoice_Date__c</fullName>
    <formula>IF(Month(Last_Invoice_Date__c)==12,
			DATE(YEAR(Last_Invoice_Date__c)+1,1,1)
		,
			DATE(YEAR(Last_Invoice_Date__c),MONTH(Last_Invoice_Date__c)+1,1)
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Invoice Date</label>
    <type>Date</type>
</CustomField>