force-app/main/default/objects/Account/fields/No_of_Active_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>No_of_Active_Subscriptions__c</fullName>
    <label>No. of Active Subscriptions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>