force-app/main/default/objects/Account/fields/No_of_Referrals_enrolled__c.field-meta.xml
<CustomField>
    <fullName>No_of_Referrals_enrolled__c</fullName>
    <label>No. of Referrals enrolled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>