force-app/main/default/objects/Account/fields/No_of_Referrals_requested_for_Trials__c.field-meta.xml
<CustomField>
    <fullName>No_of_Referrals_requested_for_Trials__c</fullName>
    <description>This field is used to store Referral request Number</description>
    <label>No. of Referrals requested for Trials</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>