force-app/main/default/objects/Account/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <label>Notice Period (In Month)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>