force-app/main/default/objects/Account/fields/Number_of_Studio__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Studio__c</fullName>
    <description>Number of Studio</description>
    <inlineHelpText>Number of Studio in a centre</inlineHelpText>
    <label>Number of Studio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>