force-app/main/default/objects/Account/fields/Onboarding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Stage__c</fullName>
    <label>Onboarding Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Stages</valueSetName>
    </valueSet>
</CustomField>