force-app/main/default/objects/Account/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Organisation__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>