force-app/main/default/objects/Account/fields/Organisation_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Sharing__c</fullName>
    <description>This backend field is using for sharing records to diff diff organisations</description>
    <inlineHelpText>This backend field is using for sharing records to diff diff organisations</inlineHelpText>
    <label>Organisation Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisations_Name</valueSetName>
    </valueSet>
</CustomField>