force-app/main/default/objects/Account/fields/Original_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Hire_Date__c</fullName>
    <label>Original Hire Date</label>
    <type>Date</type>
</CustomField>