force-app/main/default/objects/Account/fields/Parent_Casesafe_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Casesafe_ID__c</fullName>
    <formula>CASESAFEID( Parent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Casesafe ID</label>
    <type>Text</type>
</CustomField>