force-app/main/default/objects/Account/fields/Pass_Type__c.field-meta.xml
<CustomField>
    <fullName>Pass_Type__c</fullName>
    <label>Pass Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRIC</fullName>
            </value>
            <value>
                <fullName>Employment Pass</fullName>
            </value>
            <value>
                <fullName>S Pass</fullName>
            </value>
            <value>
                <fullName>Work Permit</fullName>
            </value>
            <value>
                <fullName>Dependent Pass</fullName>
            </value>
            <value>
                <fullName>Student Pass</fullName>
            </value>
            <value>
                <fullName>Work Holiday Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>