force-app/main/default/objects/Account/fields/Passport_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issue_Date__c</fullName>
    <description>Applicable for Employees</description>
    <label>Passport Issue Date</label>
    <type>Date</type>
</CustomField>