force-app/main/default/objects/Account/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <description>Applicable for Employees</description>
    <label>Passport Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>