force-app/main/default/objects/Account/fields/Payout_Type__c.field-meta.xml
<CustomField>
    <fullName>Payout_Type__c</fullName>
    <label>Payout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>