force-app/main/default/objects/Account/fields/Pending_Refunds__c.field-meta.xml
<CustomField>
    <fullName>Pending_Refunds__c</fullName>
    <description>Refunds due for payment</description>
    <inlineHelpText>Refunds due for payment</inlineHelpText>
    <label>Pending Refunds</label>
    <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Refund</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>