force-app/main/default/objects/Account/fields/Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Backend field to populate Person account email to send email</description>
    <label>Personal Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>