force-app/main/default/objects/Account/fields/Piano_Viewing_Available__c.field-meta.xml
<CustomField>
    <fullName>Piano_Viewing_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to show/hide centre for the instrument viewing process</description>
    <label>Piano Viewing Available</label>
    <type>Checkbox</type>
</CustomField>