force-app/main/default/objects/Account/fields/Profile_Pic_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Pic_URL__c</fullName>
    <inlineHelpText>Public URL to manage Profile Pic for Portal and Mobile App</inlineHelpText>
    <label>Profile Pic URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>