force-app/main/default/objects/Account/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>African</fullName>
            </value>
            <value>
                <fullName>African-American</fullName>
            </value>
            <value>
                <fullName>Asian-American</fullName>
            </value>
            <value>
                <fullName>Caucasian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Eurasian</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Malay</fullName>
            </value>
            <value>
                <fullName>Pakistani</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>