force-app/main/default/objects/Account/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the reference of reference</description>
    <label>Referred by</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Referred by)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>