force-app/main/default/objects/Account/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bahai</fullName>
            </value>
            <value>
                <fullName>Buddhist</fullName>
            </value>
            <value>
                <fullName>Catholic</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Free Thinker</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Jewish</fullName>
            </value>
            <value>
                <fullName>Muslim</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Sikh</fullName>
            </value>
            <value>
                <fullName>Taoist</fullName>
            </value>
            <value>
                <fullName>Zoroastrian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>