force-app/main/default/objects/Account/fields/Reporting_Manager_2__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in approval process.</description>
    <label>Reporting Manager 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsReportingManager</relationshipName>
    <type>Lookup</type>
</CustomField>