force-app/main/default/objects/Account/fields/SageCustomerKey__c.field-meta.xml
<CustomField>
    <fullName>SageCustomerKey__c</fullName>
    <label>SageCustomerKey</label>
    <length>20</length>
    <type>Text</type>
</CustomField>