force-app/main/default/objects/Account/fields/School_Graduated_From_1__c.field-meta.xml
<CustomField>
    <fullName>School_Graduated_From_1__c</fullName>
    <label>School Graduated From 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>