force-app/main/default/objects/Account/fields/School_Graduated_From_2__c.field-meta.xml
<CustomField>
    <fullName>School_Graduated_From_2__c</fullName>
    <label>School Graduated From 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>