force-app/main/default/objects/Account/fields/Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs__c</fullName>
    <label>Special Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>