force-app/main/default/objects/Account/fields/Student_ID_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Student_ID_Legacy__c</fullName>
    <description>Student ID(Legacy)</description>
    <label>Student ID(Legacy)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>