force-app/main/default/objects/Account/fields/Teacher_Bio__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Bio__c</fullName>
    <inlineHelpText>Data enter here will be shown on Trial and Enrolment pages.</inlineHelpText>
    <label>Teacher Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>