force-app/main/default/objects/Account/fields/Teacher_Email_Backend__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Email_Backend__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Employee Email (Backend)</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>