force-app/main/default/objects/Account/fields/Teacher_Portal_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Portal_Invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to send an automated email to Invite Teacher to Aureus Portal</description>
    <label>Employee Portal Invitation</label>
    <type>Checkbox</type>
</CustomField>