force-app/main/default/objects/Account/fields/Teacher_Profile_Pic_URL__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Profile_Pic_URL__c</fullName>
    <description>Teacher Profile Pic URL</description>
    <label>Teacher Profile Pic URL</label>
    <type>Url</type>
</CustomField>