force-app/main/default/objects/Account/fields/Teaching_Experience__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Experience__c</fullName>
    <label>Teaching Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 1 years</fullName>
            </value>
            <value>
                <fullName>1-2 years</fullName>
            </value>
            <value>
                <fullName>2-5 years</fullName>
            </value>
            <value>
                <fullName>5-10 years</fullName>
            </value>
            <value>
                <fullName>&gt;10 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>