force-app/main/default/objects/Account/fields/To_check__c.field-meta.xml
<CustomField>
    <fullName>To_check__c</fullName>
    <formula>FirstName = LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To check</label>
    <type>Checkbox</type>
</CustomField>