force-app/main/default/objects/Account/fields/To_track_also_a_student__c.field-meta.xml
<CustomField>
    <fullName>To_track_also_a_student__c</fullName>
    <formula>IF( Name =  Parent__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To track also a student</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>