force-app/main/default/objects/Account/fields/Token_ID__c.field-meta.xml
<CustomField>
    <fullName>Token_ID__c</fullName>
    <label>Token ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>