force-app/main/default/objects/Account/fields/Total_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit_Amount__c</fullName>
    <label>Total Deposit Amount</label>
    <summarizedField>Invoice__c.Deposit__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Void</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>