force-app/main/default/objects/Account/fields/Total_Deposit_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit_Refunded__c</fullName>
    <label>Total Deposit Refunded</label>
    <summarizedField>Payment__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Payment As Deposit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Success, Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>