force-app/main/default/objects/Account/fields/Total_Enrolment__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrolment__c</fullName>
    <label>Total Enrolment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>